h1. Changelog

h2. 0.0.7

* initial release