@@ -1,7 +1,5 @@
-/*
-Copyright: Hiroshi Ichikawa <http://gimite.net/en/>
-License: New BSD License
-Reference: http://dev.w3.org/html5/websockets/
-Reference: http://tools.ietf.org/html/draft-hixie-thewebsocketprotocol
-*/
-(function(){if(window.WebSocket)return;var j=window.console;if(!j)j={log:function(){},error:function(){}};function hasFlash(){if('navigator'in window&&'plugins'in navigator&&navigator.plugins['Shockwave Flash']){return!!navigator.plugins['Shockwave Flash'].description}if('ActiveXObject'in window){try{return!!new ActiveXObject('ShockwaveFlash.ShockwaveFlash').GetVariable('$version')}catch(e){}}return false}if(!hasFlash()){j.error("Flash Player is not installed.");return}WebSocket=function(c,d,f,g,h){var i=this;i.readyState=WebSocket.CONNECTING;i.bufferedAmount=0;WebSocket.__addTask(function(){i.__flash=WebSocket.__flash.create(c,d,f||null,g||0,h||null);i.__flash.addEventListener("open",function(a){try{if(i.onopen)i.onopen()}catch(e){j.error(e.toString())}});i.__flash.addEventListener("close",function(a){try{if(i.onclose)i.onclose()}catch(e){j.error(e.toString())}});i.__flash.addEventListener("message",function(a){var b=decodeURIComponent(a.getData());try{if(i.onmessage){var e;if(window.MessageEvent){e=document.createEvent("MessageEvent");e.initMessageEvent("message",false,false,b,null,null,window)}else{e={data:b}}i.onmessage(e)}}catch(e){j.error(e.toString())}});i.__flash.addEventListener("stateChange",function(a){try{i.readyState=a.getReadyState();i.bufferedAmount=a.getBufferedAmount()}catch(e){j.error(e.toString())}})})}WebSocket.prototype.send=function(a){if(!this.__flash||this.readyState==WebSocket.CONNECTING){throw"INVALID_STATE_ERR: Web Socket connection has not been established";}var b=this.__flash.send(a);if(b<0){return true}else{this.bufferedAmount=b;return false}};WebSocket.prototype.close=function(){if(!this.__flash)return;if(this.readyState!=WebSocket.OPEN)return;this.__flash.close();this.readyState=WebSocket.CLOSED;if(this.onclose)this.onclose()};WebSocket.prototype.addEventListener=function(a,b,c){if(!('__events'in this)){this.__events={}}if(!(a in this.__events)){this.__events[a]=[];if('function'==typeof this['on'+a]){this.__events[a].defaultHandler=this['on'+a];this['on'+a]=WebSocket_FireEvent(this,a)}}this.__events[a].push(b)};WebSocket.prototype.removeEventListener=function(a,b,c){if(!('__events'in this)){this.__events={}}if(!(a in this.__events))return;for(var i=this.__events.length;i>-1;--i){if(b===this.__events[a][i]){this.__events[a].splice(i,1);break}}};WebSocket.prototype.dispatchEvent=function(a){if(!('__events'in this))throw'UNSPECIFIED_EVENT_TYPE_ERR';if(!(a.type in this.__events))throw'UNSPECIFIED_EVENT_TYPE_ERR';for(var i=0,l=this.__events[a.type].length;i<l;++i){this.__events[a.type][i](a);if(a.cancelBubble)break}if(false!==a.returnValue&&'function'==typeof this.__events[a.type].defaultHandler){this.__events[a.type].defaultHandler(a)}};function WebSocket_FireEvent(d,e){return function(a){var b=new WebSocketEvent();b.initEvent(e,true,true);b.target=b.currentTarget=d;for(var c in a){b[c]=a[c]}d.dispatchEvent(b,arguments)}}function WebSocketEvent(){}WebSocketEvent.prototype.cancelable=true;WebSocketEvent.prototype.cancelBubble=false;WebSocketEvent.prototype.preventDefault=function(){if(this.cancelable){this.returnValue=false}};WebSocketEvent.prototype.stopPropagation=function(){this.cancelBubble=true};WebSocketEvent.prototype.initEvent=function(a,b,c){this.type=a;this.cancelable=c;this.timeStamp=new Date()};WebSocket.CONNECTING=0;WebSocket.OPEN=1;WebSocket.CLOSED=2;WebSocket.__tasks=[];WebSocket.__initialize=function(){if(!WebSocket.__swfLocation){j.error("[WebSocket] set WebSocket.__swfLocation to location of WebSocketMain.swf");return}var a=document.createElement("div");a.id="webSocketContainer";a.style.position="absolute";a.style.left="-100px";a.style.top="-100px";var b=document.createElement("div");b.id="webSocketFlash";a.appendChild(b);document.body.appendChild(a);swfobject.embedSWF(WebSocket.__swfLocation,"webSocketFlash","8","8","9.0.0",null,{bridgeName:"webSocket"},null,null,function(e){if(!e.success)j.error("[WebSocket] swfobject.embedSWF failed")});FABridge.addInitializationCallback("webSocket",function(){try{WebSocket.__flash=FABridge.webSocket.root();WebSocket.__flash.setCallerUrl(location.href);for(var i=0;i<WebSocket.__tasks.length;++i){WebSocket.__tasks[i]()}WebSocket.__tasks=[]}catch(e){j.error("[WebSocket] "+e.toString())}})};WebSocket.__addTask=function(a){if(WebSocket.__flash){a()}else{WebSocket.__tasks.push(a)}}function webSocketLog(a){j.log(decodeURIComponent(a))}function webSocketError(a){j.error(decodeURIComponent(a))}if(window.addEventListener){window.addEventListener("load",WebSocket.__initialize,false)}else{window.attachEvent("onload",WebSocket.__initialize)}})();
+// Copyright: Hiroshi Ichikawa <http://gimite.net/en/>
+// License: New BSD License
+// Reference: http://dev.w3.org/html5/websockets/
+// Reference: http://tools.ietf.org/html/draft-hixie-thewebsocketprotocol
+(function(){if(window.WebSocket)return;var j=window.console;if(!j)j={log:function(){},error:function(){}};function hasFlash(){if('navigator'in window&&'plugins'in navigator&&navigator.plugins['Shockwave Flash']){return!!navigator.plugins['Shockwave Flash'].description}if('ActiveXObject'in window){try{return!!new ActiveXObject('ShockwaveFlash.ShockwaveFlash').GetVariable('$version')}catch(e){}}return false}if(!hasFlash()){j.error("Flash Player is not installed.");return}WebSocket=function(c,d,f,g,h){var i=this;i.readyState=WebSocket.CONNECTING;i.bufferedAmount=0;WebSocket.__addTask(function(){i.__flash=WebSocket.__flash.create(c,d,f||null,g||0,h||null);i.__flash.addEventListener("open",function(a){try{if(i.onopen)i.onopen()}catch(e){j.error(e.toString())}});i.__flash.addEventListener("close",function(a){try{if(i.onclose)i.onclose()}catch(e){j.error(e.toString())}});i.__flash.addEventListener("message",function(a){var b=decodeURIComponent(a.getData());try{if(i.onmessage){var e;if(window.MessageEvent){e=document.createEvent("MessageEvent");e.initMessageEvent("message",false,false,b,null,null,window)}else{e={data:b}}i.onmessage(e)}}catch(e){j.error(e.toString())}});i.__flash.addEventListener("stateChange",function(a){try{i.readyState=a.getReadyState();i.bufferedAmount=a.getBufferedAmount()}catch(e){j.error(e.toString())}})})}WebSocket.prototype.send=function(a){if(!this.__flash||this.readyState==WebSocket.CONNECTING){throw"INVALID_STATE_ERR: Web Socket connection has not been established";}var b=this.__flash.send(a);if(b<0){return true}else{this.bufferedAmount=b;return false}};WebSocket.prototype.close=function(){if(!this.__flash)return;if(this.readyState!=WebSocket.OPEN)return;this.__flash.close();this.readyState=WebSocket.CLOSED;if(this.onclose)this.onclose()};WebSocket.prototype.addEventListener=function(a,b,c){if(!('__events'in this)){this.__events={}}if(!(a in this.__events)){this.__events[a]=[];if('function'==typeof this['on'+a]){this.__events[a].defaultHandler=this['on'+a];this['on'+a]=WebSocket_FireEvent(this,a)}}this.__events[a].push(b)};WebSocket.prototype.removeEventListener=function(a,b,c){if(!('__events'in this)){this.__events={}}if(!(a in this.__events))return;for(var i=this.__events.length;i>-1;--i){if(b===this.__events[a][i]){this.__events[a].splice(i,1);break}}};WebSocket.prototype.dispatchEvent=function(a){if(!('__events'in this))throw'UNSPECIFIED_EVENT_TYPE_ERR';if(!(a.type in this.__events))throw'UNSPECIFIED_EVENT_TYPE_ERR';for(var i=0,l=this.__events[a.type].length;i<l;++i){this.__events[a.type][i](a);if(a.cancelBubble)break}if(false!==a.returnValue&&'function'==typeof this.__events[a.type].defaultHandler){this.__events[a.type].defaultHandler(a)}};function WebSocket_FireEvent(d,e){return function(a){var b=new WebSocketEvent();b.initEvent(e,true,true);b.target=b.currentTarget=d;for(var c in a){b[c]=a[c]}d.dispatchEvent(b,arguments)}}function WebSocketEvent(){}WebSocketEvent.prototype.cancelable=true;WebSocketEvent.prototype.cancelBubble=false;WebSocketEvent.prototype.preventDefault=function(){if(this.cancelable){this.returnValue=false}};WebSocketEvent.prototype.stopPropagation=function(){this.cancelBubble=true};WebSocketEvent.prototype.initEvent=function(a,b,c){this.type=a;this.cancelable=c;this.timeStamp=new Date()};WebSocket.CONNECTING=0;WebSocket.OPEN=1;WebSocket.CLOSED=2;WebSocket.__tasks=[];WebSocket.__initialize=function(){if(!WebSocket.__swfLocation){j.error("[WebSocket] set WebSocket.__swfLocation to location of WebSocketMain.swf");return}var a=document.createElement("div");a.id="webSocketContainer";a.style.position="absolute";a.style.left="-100px";a.style.top="-100px";var b=document.createElement("div");b.id="webSocketFlash";a.appendChild(b);document.body.appendChild(a);swfobject.embedSWF(WebSocket.__swfLocation,"webSocketFlash","8","8","9.0.0",null,{bridgeName:"webSocket"},null,null,function(e){if(!e.success)j.error("[WebSocket] swfobject.embedSWF failed")});FABridge.addInitializationCallback("webSocket",function(){try{WebSocket.__flash=FABridge.webSocket.root();WebSocket.__flash.setCallerUrl(location.href);for(var i=0;i<WebSocket.__tasks.length;++i){WebSocket.__tasks[i]()}WebSocket.__tasks=[]}catch(e){j.error("[WebSocket] "+e.toString())}})};WebSocket.__addTask=function(a){if(WebSocket.__flash){a()}else{WebSocket.__tasks.push(a)}}window.webSocketLog=function(a){j.log(decodeURIComponent(a))};window.webSocketError=function(a){j.error(decodeURIComponent(a))};if(window.addEventListener){window.addEventListener("load",WebSocket.__initialize,false)}else{window.attachEvent("onload",WebSocket.__initialize)}})();
