@@ -2,3 +2,4 @@
   - :host: 127.0.0.1
     :port: 8080
     :secret: my_secret_key
+    :secure: false
