@@ -4,7 +4,7 @@ module Socky
     def socky(options = {})
       host = Socky::CONFIG[:hosts].first
       options = {
-        :host                 => host[:host],
+        :host                 => (host[:secure] ? "wss://" : "ws://") + host[:host],
         :port                 => host[:port],
       }.merge(options)
       javascript_tag "socky('#{options.delete(:host)}', '#{options.delete(:port)}', '#{options.to_query}');"
